ajout toolbar + ajout de creation vehicule activity + configuration activity + ajout d'un clicklistener et de Detail vehicule activity + ajout d'un package util

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="ajouter">Ajouter un véhicule</string>
+    <string name="configuration">Configuration</string>
 </resources>
