--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="prompt_tel">Téléphone</string>
     <string name="prompt_permis">Numéro permis</string>
     <string name="prompt_date_naissance">Date naissance</string>
+    <string name="LouerVéhicule">Louer Véhicule</string>
 </resources>
