Mise a jour des DAO. (supression des voitures

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">LokaCar</string>
 
     <!-- Strings related to login -->
+    <string name="nom_agence">Agence</string>
+    <string name="prompt_agence">nom de l\'Agence</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Mot de passe</string>
     <string name="action_sign_in">Valider</string>
